--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -63,6 +63,7 @@ p {
 a {
   color: inherit;
   text-decoration: none;
+  word-break: break-all;
 }
 
 .link {
